Bug 1681984 - Remove elements from L10nMutation pendingElements when they're removed from observed roots. r=nordzilla,smaug

Differential Revision: https://phabricator.services.mozilla.com/D131292